opam-version: "2.0"
name: "ocamlcfg"
maintainer: "Greta Yorsh <gyorsh@janestreet.com>"
authors: "Greta Yorsh <gyorsh@janestreet.com>"
homepage: "https://github.com/gretay-js/ocaml-cfg"
bug-reports: "https://github.com/gretay-js/ocaml-cfg/issues"
license: "GNU Lesser General Public License version 2.1"
dev-repo: "git+https://gretay-js/ocaml-cfg.git"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.07"}
  "dune" {build & >= "1.8"}
]
synopsis: "Compiler library for building Control Flow Graph (CFG) for OCaml"
description: "A library for converting from
OCaml native compiler's intermediate represenation Linear to CFG and back."
