(library
 (name ocamlcfg)
 (public_name ocamlcfg)
 (private_modules
      cfg_intf
      eliminate_dead_blocks
      linear_utils
      cfg
      eliminate_fallthrough_blocks
      cfg_to_linear
      extra_debug
      simplify_comparisons
      cfg_with_layout
      label
      trap_stack
      disconnect_block
      linear_to_cfg
  )
 (libraries
  compiler-libs.common)
 (synopsis "library for building CFG"))
