
(library
  (name test_graph)
  (libraries core ocamlcfg)
  (modules test_graph)
  (preprocess (pps ppx_jane)))

(test
  (name path_analysis_test)
  (modules path_analysis_test)
  (libraries test_graph)
  (preprocess (pps ppx_jane)))

(test
  (name dominator_test)
  (modules dominator_test)
  (libraries test_graph)
  (preprocess (pps ppx_jane)))

(test
  (name scc_test)
  (modules scc_test)
  (libraries core ocamlcfg)
  (preprocess (pps ppx_jane)))
